--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.2.1",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
-    "antd": "^4.3.5",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
-    "formik": "^2.1.4",
     "moment": "^2.26.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -25,8 +22,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "uuid": "^8.1.0",
-    "yup": "^0.29.1"
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
