--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "concurrently \"nodemon server.js\" \"cd client && npm run start\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"nodemon server.js\" \"cd client && npm run start\""
   },
   "author": "Keremcan Buyuktaskin",
   "license": "MIT",
