--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.3",
-    "express-validator": "^6.5.0",
-    "helmet": "^3.23.1",
+    "express-fileupload": "^1.2.0",
+    "express-validator": "^6.6.1",
+    "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.19",
+    "mongoose": "^5.10.6",
     "request": "^2.88.2"
   },
   "devDependencies": {
@@ -26,9 +26,9 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.1.2"
   }
 }
