--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -13,6 +13,7 @@
     "no-use-before-define": "off",
     "no-console": "off",
     "no-shadow": "off",
+    "import/extensions": "off",
     "react/prop-types": "off",
     "react/forbid-prop-types": "off",
     "react/require-default-props": "off",
