--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
-    "materialize-css": "^1.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.26.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-images-upload": "^1.2.8",
     "react-lazy-load": "^3.0.13",
+    "react-materialize": "^3.9.3",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
