--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 
 # production
 /build
-# /config/production.json
+/config/default.json
+/config/production.json
 
 # misc
 .DS_Store
@@ -19,6 +20,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
