--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "compression": "^1.7.4",
     "config": "^3.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-validator": "^6.6.1",
