--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "tgr-api",
+  "name": "tgr-server",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server/server",
     "server": "nodemon server/server",
