--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "tgr-admin",
-  "version": "0.1.0",
+  "name": "tgr-client",
+  "version": "1.0.0",
+  "description": "Dashboard for Thailand Travel Guide mobile app",
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
     "materialize-css": "^1.0.0-rc.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-lazyload-fadein": "^1.1.0",
     "react-materialize": "^3.9.3",
     "react-redux": "^7.2.0",
@@ -47,7 +47,7 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react": "^7.21.4",
     "prettier": "^2.0.5"
   },
   "proxy": "http://localhost:5000"
