--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tgr-server",
   "version": "1.0.0",
+  "description": "Backend for Thailand Travel Guide mobile app",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server/server",
     "server": "nodemon server/server",
@@ -22,7 +22,7 @@
     "express-validator": "^6.6.1",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.6"
+    "mongoose": "^5.10.9"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
@@ -31,7 +31,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.5",
     "prettier": "^2.1.2"
   }
 }
