--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for Thailand Travel Guide mobile app",
   "main": "server.js",
   "scripts": {
-    "start": "node server/server",
-    "server": "nodemon server/server",
+    "start": "node server",
+    "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
