--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express-validator": "^6.6.1",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.9"
+    "mongoose": "^5.10.9",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
