--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
     "react-lazyload-fadein": "^1.1.0",
     "react-materialize": "^3.9.3",
     "react-redux": "^7.2.0",
