--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node server",
-    "server": "nodemon server",
+    "start": "node server/server",
+    "server": "nodemon server/server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
