--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.12.1",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.21.2",
