--- a/client/package.json
+++ b/client/package.json
@@ -41,15 +41,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.14.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "prettier": "^2.0.5"
-  },
+  "devDependencies": {},
   "proxy": "http://localhost:5000"
 }
