--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "description": "Backend for Thailand Travel Guide mobile app",
   "main": "server.js",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
-    "start": "node server/server",
-    "server": "nodemon server/server",
+    "start": "node server",
+    "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
@@ -30,7 +27,7 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
-    "eslint": "^7.12.1",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
