--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node server",
-    "server": "nodemon server",
+    "start": "node server/server",
+    "server": "nodemon server/server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
@@ -21,21 +21,28 @@
     "config": "^3.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.0",
-    "express-validator": "^6.8.0",
+    "express-fileupload": "^1.2.1",
+    "express-validator": "^6.9.2",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.8",
+    "mongoose": "^5.11.17",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "concurrently": "^4.1.2",
-    "eslint": "^7.15.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "nodemon": "^2.0.5",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-wesbos": "^1.0.1",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
   }
 }
