--- a/.eslintrc
+++ b/.eslintrc
@@ -10,11 +10,19 @@
     "ecmaVersion": 11
   },
   "rules": {
-    "prettier/prettier": ["error", { "singleQuote": true }],
     "no-console": "off",
     "comma-dangle": "off",
     "consistent-return": "off",
-    "object-curly-newline": "off"
+    "object-curly-newline": "off",
     // "array-callback-return": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "trailingComma": "none",
+        "singleQuote": true,
+        "printWidth": 120,
+        "tabWidth": 2
+      }
+    ]
   }
 }
