--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,28 +1,20 @@
 {
-  "extends": [
-    "react-app",
-    "airbnb",
-    "airbnb/hooks",
-    "plugin:jsx-a11y/recommended",
-    "prettier",
-    "prettier/react"
-  ],
-  "plugins": ["jsx-a11y", "prettier"],
+  "extends": ["wesbos"],
   "rules": {
-    "no-underscore-dangle": "off",
-    "no-console": "off",
-    "no-shadow": "off",
-    "import/extensions": "off",
-    "react/forbid-prop-types": "off",
-    "react/require-default-props": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/prop-types": "off"
-    // "no-use-before-define": "off",
-    // "react/state-in-constructor": "off",
-    // "react/static-property-placement": "off",
-    // "react/jsx-props-no-spreading": "off",
-    // "react/button-has-type": "off",
-    // "jsx-a11y/label-has-associated-control": "off",
-    // "jsx-a11y/no-onchange": "off"
+    "default-case": 0,
+    "react-hooks/exhaustive-deps": 0,
+    "react/no-danger": 0,
+    "react/prop-types": 0,
+    "no-shadow": 0,
+    "react/jsx-props-no-spreading": 0,
+    "prettier/prettier": [
+      "error",
+      {
+        "trailingComma": "none",
+        "singleQuote": true,
+        "printWidth": 120,
+        "tabWidth": 2
+      }
+    ]
   }
 }
