--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,19 @@
   "version": "1.0.0",
   "description": "Dashboard for Thailand Travel Guide mobile app",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
-    "axios": "^0.19.2",
-    "materialize-css": "^1.0.0-rc.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "axios": "^0.21.1",
+    "materialize-css": "^1.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-lazyload-fadein": "^1.1.0",
-    "react-materialize": "^3.9.5",
-    "react-redux": "^7.2.0",
+    "react-materialize": "^3.9.7",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "react-select": "^3.1.1",
+    "react-scripts": "4.0.1",
+    "react-select": "^4.1.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
@@ -22,12 +23,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "wesbos"
   },
   "browserslist": {
     "production": [
@@ -40,15 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
-    "prettier": "^2.2.1"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
