--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -7,6 +7,7 @@
     "react/prop-types": 0,
     "no-shadow": 0,
     "react/jsx-props-no-spreading": 0,
+    "import/no-cycle": 0,
     "prettier/prettier": [
       "error",
       {
