--- a/.eslintrc
+++ b/.eslintrc
@@ -10,11 +10,11 @@
     "ecmaVersion": 11
   },
   "rules": {
-    "no-console": "off",
-    "comma-dangle": "off",
-    "consistent-return": "off",
-    "object-curly-newline": "off",
-    // "array-callback-return": "off",
+    "no-console": 0,
+    "comma-dangle": 0,
+    "consistent-return": 0,
+    "object-curly-newline": 0,
+    // "array-callback-return": 0,
     "prettier/prettier": [
       "error",
       {
